--- a/example/index.css
+++ b/example/index.css
@@ -1,7 +1,39 @@
+#app {
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, .8);
+}
+
 .line-through {
     text-decoration: line-through;
 }
 
 .todo-list-container {
-    
+    width: 300px;
+    height: calc(100% - 200px - 100px);
+    margin: auto;
+    padding-top: 200px;
+    text-align: center;
+}
+
+input[type="text"] {
+    width: 200px;
+    line-height: 18px;
+    font-size: 18px;
+    padding: 0 .5em;
+}
+
+.todo-list-container ul li {
+    text-align: left;
+    list-style: none;
+    font-size: 16px;
+    margin-bottom: 8px;
+}
+
+input[type="checkbox"] {
+    margin-right: 8px;
+}
+
+button {
+    margin-right: 4px;
 }
